# TaskManager

./: .create_tables.sql.swp  .create_tasks.sql.swp  .gitignore  .gitignore.swp  CMakeLists.txt  README.md  albums.txt  compile_commands.json  conandata.yml  create_folders.sql  temp  temp.cpp  temp2  temp2.cpp
.cache/clangd/index/: Context.cpp.95FB887BBFF1A08F.idx  Context.hpp.B2F026B2AA0755C6.idx  Folder.cpp.F789B2E4065C9C81.idx  Folder.hpp.DD9253FED263EAF3.idx  Project.cpp.FA9E6023E4A503FA.idx  Project.hpp.B0A321304E7145F7.idx  ProjectType.hpp.9EEAA7C1D6C7FA44.idx  Status.hpp.F5532FE5B6945376.idx  main.cpp.E5A77587F04631D9.idx
conf/: gtd-conf.toml
documentation/: todo_class_diagram.md
include/: Completable.hpp  CompletableBase.hpp  CompleteableContainer.hpp  Context.h  Context.hpp  ContextContainer.hpp  DbBase.hpp  Folder.hpp  FolderContainer.hpp  GtdBase.hpp  GtdBaseContainer.hpp  GtdContainer.hpp  GtdHelper.hpp  GtdSqlite.cpp  GtdSqlite.hpp  ImplHelpers.hpp  Project.hpp  ProjectContainer.hpp  ProjectType.hpp  Sqlite.hpp  SqliteConnection.hpp  Status.h  Status.hpp  Task.hpp  TaskContainer.hpp  UpdateStack.hpp  gtd_concepts.hpp
old_stuff/: ProjectType.cpp  ProjectType.hpp  Status.hpp  Task.hpp
settings/: display_settings.json
sql_scripts/: create_contexts.sql  create_folders.sql  create_projects.sql  create_tables.sql  create_tasks.sql  gtd_db.sql  gtd_db_dev.db  temp.db
src/: Completable.cpp  CompletableBase.cpp  CompleteableContainer.cpp  Context.cpp  ContextContainer.cpp  DbBase.cpp  Folder.cpp  FolderContainer.cpp  GtdBase.cpp  GtdBaseContainer.cpp  GtdHelper.cpp  GtdSqlite.cpp  ImplHelpers.cpp  Project.cpp  ProjectContainer.cpp  ProjectType.cpp  SqliteConnection.cpp  Status.cpp  Task.cpp  TaskContainer.cpp  UpdateStack.cpp  main.cpp  sql_play.cpp  template_main.cpp  tests.cpp
temp.dSYM/Contents/Resources/DWARF/: temp
temp2.dSYM/Contents/Resources/DWARF/: temp2
